# pyflowcl

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  client.py  cliente_openapi.py  flow_client.py  index.html  mkdocs.yml  objects.inv  payment_client.py  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codacy.yml  docs.yml  new_release.yml  pyflow.yml  pyflowcl-docs.yml  pyflowcl-tests.yml  pyflowcl.yml  tests_coverage.yml
apiFlow.yaml/: index.html
apiclient/: index.html
apiclient-payment/: index.html
apiclient-refund/: index.html
changelog/: index.html
cli/: index.html
contributing/: index.html
django-payments/: index.html
docs/: apiFlow.yaml.md  apiclient-payment.md  apiclient-refund.md  apiclient.md  changelog.md  cli.md  conf.py  contributing.md  django-payments.md  flowapi.md  index.md  index.rst  merchants.md  models.md  modules.rst  pyflowcl.rst  uso-avanzado.md  uso.md  utils.md
docs/overrides/partials/integrations/analytics/: matomo.html
flowapi/: index.html
merchants/: index.html
models/: index.html
overrides/partials/integrations/analytics/: matomo.html
pyflow/: apiclient.py  models.py
pyflowcl/: Clients.py  Customer.py  Payment.py  Refund.py  __init__.py  apiclient.py  cli.py  exceptions.py  flowapi_spec.py  models.py  models_36.py  openapi3.py  payment.py  utils.py  version.py
pyflowcl/fragments/: fragment-core.yml  fragment-live-server.yml  fragment-payments.yml  fragment-sandbox-server.yml
pyflowcl/yaml_files/: apiFlow.min.yaml  apiFlow.sandbox.min.yaml  apiFlow.yaml
tests/: conftest.py  test_apiclient.py  test_models.py  test_payment.py  test_pyflow.py  test_pyflow_openapi3.py  test_refund.py
uso/: index.html
uso-avanzado/: index.html
utils/: index.html
